# stock_trading_system_simulation

./: Cargo.toml  README.md
src/data/: stocks.txt  user_rules.txt
