[package]
name = "stock_trading_system_simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scheduled-thread-pool = "0.2.7"
rand = "0.8.5"
crossbeam-channel = "0.5.11"
strum = "0.26.2"
strum_macros = "0.26.2"
bma-benchmark = "0.0.24"
